// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Marker renders marker of the icon type matching snapshot 1`] = `
<IconMarker
  iconUrl="http://example.com/icon.png"
  onSeek={[Function]}
  onTouch={[Function]}
  style={
    Array [
      undefined,
      Object {
        "left": 0,
      },
    ]
  }
/>
`;

exports[`Marker renders marker of the text type matching snapshot 1`] = `
<TextMarker
  onSeek={[Function]}
  onTouch={[Function]}
  style={
    Array [
      undefined,
      Object {
        "left": 0,
      },
    ]
  }
  text="Hello, world!"
/>
`;
